@startuml classDiagram
!include ../include/themes/light.puml

class MainFrame {
  createFrame()
}

abstract class Screen {
  mainPanel : JPanel
  Screen(mainPanel)
  addContent()
  {abstract} createContent() : JPanel
}

note left of Screen::addContent
  mainPanel.add(createContent())
end note

Screen <|-- Menu
Screen <|-- CardViewer
Screen <|-- CardEditor
Screen <|-- Settings

Screen -> DataPreperator : has
Screen --> GuiFactory : has

class Menu {

}

class CardViewer {

}

class CardEditor {

}


class MenuBar {

}

class Settings {

}

abstract class GuiFactory {
  createButton(text) : JButton
}

GuiFactory <|-- DefaultGuiFactory

class DefaultGuiFactory {

}

class DataPreperator {

}

DataPreperator --> DataManager : has

class DataManager {
  persist()
  retrieveAllSets() : List<String>
  retrieveCardsBySet() : List<Card>
}

DataManager ..> Card : manages
DataManager ..> CardSet : manages

class Card {
  cardSet : String
  topic : String
  answer : String
  solution : String
  hint : String
}

class CardSet {
  name : String
}

@enduml